--- a/css/style.css
+++ b/css/style.css
@@ -12,19 +12,6 @@ body {
   outline: none;
   border: none;
 }
-.search-box {
-  border: 1px solid rgb(3, 118, 211);
-  width: 281px;
-  border-radius: 5px;
-  margin: auto;
-  margin-top: 50px;
-  border-right: none;
-}
-.search-button {
-  padding: 10px 50px;
-  border-radius: 25px;
-  margin-left: 20px;
-}
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -37,12 +24,14 @@ body {
 }
 .single-product {
   padding: 10px;
+  border-radius: 10px;
   transition: 0.6s;
 }
 .single-product:hover {
-  box-shadow: 4px 4px 7px gray;
+  box-shadow: 4px 4px 4px gray;
   border-radius: 10px;
-  border: 1px solid cyan;
+  border: 1px solid rgb(33, 62, 228);
+  background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%);
 }
 .product-image {
   width: 150px;
