--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@ body {
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  /* border: 1px solid black; */
   text-align: center;
   width: 100%;
   margin: auto;
@@ -25,13 +24,13 @@ body {
 .single-product {
   padding: 10px;
   border-radius: 10px;
-  transition: 0.6s;
+  transition: 0.8s;
+  background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%);
 }
 .single-product:hover {
-  box-shadow: 4px 4px 4px gray;
+  box-shadow: 3px 3px 3px gray;
   border-radius: 10px;
   border: 1px solid rgb(33, 62, 228);
-  background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%);
 }
 .product-image {
   width: 150px;
@@ -45,6 +44,7 @@ body {
   border-radius: 5px;
   margin-right: 30px;
   position: fixed;
+  background-color: rgb(253, 244, 233);
 }
 .cart-main {
   padding-right: 30px;
